# MotorsController

./: .gitignore  .mxproject  CMakeLists.txt  MotorsController.ioc
CMake/: toolchain-arm-gcc.cmake
Src/: CMakeLists.txt  main.cpp
Src/CMSIS_HAL/: CMakeLists.txt
Src/FreeRTOS/: CMakeLists.txt
Src/FreeRTOS/Source/include/: FreeRTOSConfig.h
Src/FreeRTOS/Source/portable/GCC/ARM_CM3/: port.c
Src/HalWrapper/: HalTypesWrapper.h  HalWrapper.cpp  HalWrapper.h
Src/MovementElement/: MovementElement.cpp  MovementElement.h
Src/Periph/: CMakeLists.txt  can.c  gpio.c
Src/StepperMotorDriver/: stepperMotorDriver.cpp  stepperMotorDriver.h
Src/SystemHal/: stm32f1xx_it.c
Src/Tasks/: BlinkingLEDTask.cpp  BlinkingLEDTask.h  MovementElementTask.cpp  MovementElementTask.h  TaskInterfaces.h
Tests/: CMakeLists.txt
Tests/Mocks/: HalWrapperMock.h  StepperMotor_L293DMock.h
Tests/MovementElement/: CMakeLists.txt  test_MovementElement.cpp
Tests/StepperMotorDriver/: CMakeLists.txt  test_StepperMotorDriver.cpp
Tests/module_template/: test_template.cpp
